@@ -6,6 +6,7 @@ Date: ????
   Bugfixes:
     - Fixed that stone loot was not replaced on all rocks with omnite
     - Fixed that water omnitraction tech cost was pretty low
+    - Fixed that the last two levels of extraction techs got cheaper
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.5
 Date: 2020.12.27
